Disables comments, adds GA tracking

--- a/_config.yml
+++ b/_config.yml
@@ -91,11 +91,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: invisiblestylus
-disqus_show_comment_count: true
+disqus_short_name:
+disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-58720396-1
 
 # Facebook Like
 facebook_like: false
