--- a/_config.yml
+++ b/_config.yml
@@ -119,15 +119,15 @@ theme:
   title: iMad
   avatar: avatar.jpg
   gravatar: # Email MD5 hash
-  description: "Ramblings of a ridiculously cynical iOS developer" # used by search engines
+  description: "Ramblings of a ridiculously cynical developer" # used by search engines
 
   # Header and footer text
   header_text: >
      <h2>iMad</h2>
-     <p>Ramblings of a ridiculously cynical iOS developer</p>
+     <p>Ramblings of a ridiculously cynical developer</p>
   header_text_feature_image:
   footer_text: >
-   Proudly a <a href="http://jekyllrb.com">Jekyll</a> static site, based on a modified <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>. Copyright © 2013 - 2018 Tyrone Trevorrow 
+   Proudly a <a href="http://jekyllrb.com">Jekyll</a> static site, based on a modified <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>. Copyright © Tyrone Trevorrow 
 
   # Icons
   rss: false
