build: attempt to fix netlify build

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://blog.sudeium.com
+url: //blog.sudeium.com
 title: iMad
 subtitle: Ramblings of a ridiculously cynical iOS developer
 author: Tyrone
