--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ theme:
      <p>Ramblings of a ridiculously cynical developer</p>
   header_text_feature_image:
   footer_text: >
-   Proudly a <a href="http://jekyllrb.com">Jekyll</a> static site, based on a modified <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>. Copyright © Tyrone Trevorrow 
+   Shamefully a <a href="http://jekyllrb.com">Jekyll</a> static site, based on a modified <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>. Copyright © Tyrone Trevorrow 
 
   # Icons
   rss: false
