--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,7 @@ theme:
   youtube:
 
   # Scripts
-  google_analytics: UA-58720396-1 # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: # Tracking ID, e.g. "UA-000000-01"
   disqus_shortname:
   katex: true # Enable if using math markup
 
